@@ -1,5 +1,7 @@
 === HEAD
 
+* Use primary_key :keep_order option in the schema dumper if the auto incrementing column is not the first column in the table (jeremyevans)
+
 * Set :auto_increment option correctly in the schema parser when the auto incrementing column is not the first column in the table (jeremyevans)
 
 * Support :keep_order option to primary_key in schema generator, to not automatically make the primary key the first column (jeremyevans)
